--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Work with asynchronism JS",
   "main": "index.js",
   "scripts": {
-    "callback": "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js"
   },
   "repository": {
     "type": "git",
